postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-statefulset
spec:
  serviceName: postgresql
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
              # subPath: data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
