jenkins-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-pod
          image: viktortasevski/room-revamp-be:latest
          imagePullPolicy: Always
          command: ['php', 'artisan', 'serve', '--host', '0.0.0.0']
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: storage
              mountPath: /app/storage/app
            - name: env-config-volume
              mountPath: /app/.env
              subPath: .env
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: backend-pvc
        - name: env-config-volume
          configMap:
            name: backend-env-config

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-pod
          image: viktortasevski/room-revamp-fe:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          command:
            - 'sh'
            - '-c'
            - |
              sed -i 's#__REACT_APP_API_URL__#'"$REACT_APP_API_URL"'#g' public/env.js
              yarn build
              serve -s build

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: LoadBalancer
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
