postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: LoadBalancer
  selector:
    app: postgresql
  ports:
    - port: 5432
      targetPort: 5432
